tests/ui/regions/regions-wf-trait-object.stderr
error[E0478]: lifetime bound not satisfied
  --> $DIR/regions-wf-trait-object.rs:7:29
   |
LL |     x: Box<dyn TheTrait<'a>+'b>
   |                             ^^ lifetime bound not satisfied
   |
note: lifetime parameter instantiated with the lifetime `'b` as defined here
  --> $DIR/regions-wf-trait-object.rs:6:15
   |
LL | struct Foo<'a,'b> {
   |               ^^
note: but lifetime parameter must outlive the lifetime `'a` as defined here
  --> $DIR/regions-wf-trait-object.rs:6:12
   |
LL | struct Foo<'a,'b> {
   |            ^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0478`.
